--- a/rust-actix/Cargo.toml
+++ b/rust-actix/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+chrono = { version = "0.4", features = ["serde"] }
 serde_json = "1"
 structopt = "0.3"
