--- a/rust-axum/Cargo.toml
+++ b/rust-axum/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-axum"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.5", features = ["headers"] }
 chrono = { version = "0.4", features = ["serde"] }
+clap = { version = "4.5.2", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-structopt = "0.3"
 tokio = { version = "1", features = ["full"] }
