--- a/rust-actix/Cargo.toml
+++ b/rust-actix/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-actix"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 chrono = { version = "0.4", features = ["serde"] }
+clap = { version = "4.5.2", features = ["derive"] }
 serde_json = "1"
-structopt = "0.3"
